[package]
name = "svlmd"
version = "0.1.0"
edition = "2021"
authors = ["Sira Pornsiriprasert <code@psira.me>"]

homepage = "https://github.com/p-sira/svlmd-rust"
description = "Backend utilities for Sira's Very Large Medical Database"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dialoguer = "0.11.0"
anyhow = "1.0.80"
chrono = "0.4.34"
serde_json = "1.0.140"
thiserror = "2.0.12"
colored = "3.0.0"
semver = "1.0.26"
git2 = "0.20.2"
